--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -54,9 +54,7 @@
 }
 
 
-.side-menu{
 
-}
 
 /* Weather Info Box */
 
@@ -140,6 +138,17 @@ color: #343838!important;
 .dark-theme-body{
     background-color: #40474e;
 }
+.dark-theme-body .md-text-field {
+    color: #fff!important;
+}
+.dark-theme-body .md-floating-label {
+    color: #c1c1c1!important;
+}
+
+.dark-theme-body .md-divider {
+    background-color: #fff!important;
+}
+
 .side-menu.light-theme{
     border-top: 1px solid #343838;
 }
