--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,56 +1,65 @@
-.position-relative{
-    position:relative;
+.position-relative {
+    position: relative;
 }
 
 /* Layout Classes */
 
-.direction-column-space-between{
+.direction-column-space-between {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.flex-center-justify{
+.flex-center-justify {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.flex-center{
+.flex-center {
     display: flex;
     align-items: center;
-    
+
 }
 
-.flex-spread-evenly{
+.flex-spread-evenly {
     display: flex;
     justify-content: space-between;
-    
+
 }
+
 /* Override defaults */
 
-.MuiFormControlLabel-root{
-    margin: 0!important;
+.MuiFormControlLabel-root {
+    margin: 0 !important;
 }
 
-.component-wrapper{
+.component-wrapper {
     margin-top: 20px;
-   
+
 }
 
-.curr-weather-box{
-    /* width: 80%; */
-    background-color: rgb(194, 194, 194);
+.transparent-strip {
+    background-color: #00000063;
+}
+
+.forecast-panels {
+    padding: 0 15px;
+}
+
+.curr-weather-box {
+
     height: 70vh;
-    padding: 20px 10px;
+    padding: 10px 0px;
     background-image: url('../img/scattered-cloud.png');
     background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  overflow: hidden;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
 }
-.search-input{
-    width:40%;
+
+.search-input {
+    width: 40%;
 }
 
 
@@ -58,22 +67,24 @@
 
 /* Weather Info Box */
 
-.weather-icon{
-    width:170px;
+.weather-icon {
+    width: 170px;
     height: 100px;
 }
-.weather-city-wrapper{
-    color:#fff;
+
+.weather-city-wrapper {
+    color: #fff;
     margin-left: -15px;
 }
-.weather-city-title{
+
+.weather-city-title {
     text-transform: capitalize;
     font-size: 25px;
 }
 
 /* Forecast Boxes */
 
-.forecast-boxes-wrapper{
+.forecast-boxes-wrapper {
     width: 100%;
     display: flex;
     align-items: center;
@@ -82,33 +93,38 @@
     list-style-type: none;
     padding: 0;
 }
-.forecast-box{
+
+.forecast-box {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 19%;
-background-color: #fff;
-padding: 12px;
+    background-color: #fff;
+    padding: 12px;
 
 }
 
-.content-wrapper{
+.content-wrapper {
     display: flex;
-    
+
 }
-.main-content{
-    flex:1;
+
+.main-content {
+    flex: 1;
 }
-.side-menu.active{
+
+.side-menu.active {
     opacity: 1;
     right: 0px;
     width: 240px;
     padding: 20px 20px;
 }
-.side-menu-wrapper{
+
+.side-menu-wrapper {
     position: relative;
 }
-.toggle-sidebar{
+
+.toggle-sidebar {
     width: 38px;
     height: 40px;
     border-bottom-left-radius: 50%;
@@ -126,38 +142,42 @@ padding: 12px;
     font-size: 20px;
 }
 
-.light-theme{
+.light-theme {
     background-color: #ecf1f9;
-color: #343838!important;
+    color: #343838 !important;
 }
 
-.dark-theme{
+.dark-theme {
     background-color: #343a40;
-    color: #fff!important;
+    color: #fff !important;
 }
-.dark-theme-body{
+
+.dark-theme-body {
     background-color: #40474e;
 }
+
 .dark-theme-body .md-text-field {
-    color: #fff!important;
+    color: #fff !important;
 }
+
 .dark-theme-body .md-floating-label {
-    color: #c1c1c1!important;
+    color: #c1c1c1 !important;
 }
 
 .dark-theme-body .md-divider {
-    background-color: #fff!important;
+    background-color: #fff !important;
 }
 
-.side-menu.light-theme{
+.side-menu.light-theme {
     border-top: 1px solid #343838;
 }
 
-.side-menu.dark-theme{
+.side-menu.dark-theme {
     border-top: 1px solid #4c535a;
 }
-.side-menu{
-    
+
+.side-menu {
+
     /* position: fixed; */
     /* z-index: 4; */
     overflow: auto;
@@ -167,8 +187,8 @@ color: #343838!important;
     opacity: 0;
     padding: 0px;
     /* height: 100% ; */
-     height: calc(100vh - 47px); 
-   
+    height: calc(100vh - 47px);
+
     color: #343838;
     overflow: hidden;
     -webkit-transition: all .7s ease;
@@ -201,8 +221,8 @@ color: #343838!important;
 
 /**************AutoComplete*************/
 
-.search-results{
-    position: absolute!important;
+.search-results {
+    position: absolute !important;
     width: 100%;
     z-index: 111;
     background-color: #fff;
@@ -210,44 +230,47 @@ color: #343838!important;
     overflow-y: auto;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
+
 @media screen and (max-width: 950px) {
 
-    .curr-weather-box{
+    .curr-weather-box {
         height: 100%;
     }
 
     .toggle-sidebar {
         top: 20%;
     }
-    .forecast-box{
+
+    .forecast-box {
         width: 100%;
         font-size: 22px;
-    
+
     }
+
     .weather-icon {
         width: 115px;
         height: 77px;
         margin-left: -27px;
     }
-  }
+}
 
 
-  /***/
+/***/
 
-  .weather-icon-wrapper{
+.weather-icon-wrapper {
     width: 115px;
     height: 77px;
     overflow: hidden;
-  }
+}
 
- /* .btn .btn-danger{
+/* .btn .btn-danger{
     transform: rotateY(180deg);
     transition: transform 0.8s;
     transform-style: preserve-3d;
  } */
 
- .favorite-icon{
+.favorite-icon {
     font-size: 22px;
     margin-right: 10px;
     color: orange;
- }
+}
