--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -4,6 +4,9 @@
     position: relative;
 }
 
+.favorite-tempature-text{
+    font-size: 16px;
+}
 /* Layout Classes */
 
 .direction-column-space-between {
